tests/baselines/reference/augmentedTypesClass3.errors.txt
augmentedTypesClass3.ts(3,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesClass3.ts(6,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesClass3.ts(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== augmentedTypesClass3.ts (3 errors) ====
    // class then module
    class c5 { public foo() { } }
    module c5 { } // should be ok
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
    class c5a { public foo() { } }
    module c5a { var y = 2; } // should be ok
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
    class c5b { public foo() { } }
    module c5b { export var y = 2; } // should be ok
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
    //// class then import
    class c5c { public foo() { } }
    //import c5c = require('');